# agentiker-plan-follow

./: .coverage  .coveragerc  .gitignore  .setup_done  BRANCHING.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  __init__.py  _fmt.py  coord_state.py  coverage.json  mcp_server.py  plan_core.py  plan_coverage.py  plan_decompose.py  plan_hooks.py  plan_migrate.py  plan_peer_review.py  plan_review.py  plan_roadmap.py  plan_suggest.py  plan_sync.py  plan_templates.py  plan_todo.py  plan_tools.py  plugin.yaml  pyproject.toml  review_profiles.py
.forgejo/: Dockerfile.runner
.forgejo/workflows/: ci.yml
dashboard/: manifest.json  plugin_api.py
data/templates/: analysis.yaml  bugfix.yaml  deploy.yaml  docs.yaml  feature.yaml  fix.yaml  go-setup.yaml  infrastructure.yaml  refactoring.yaml  research.yaml  security.yaml
hooks/: __init__.py  base.py  breaker.py
profiles/: plan-reviewer.yaml  plan-worker.yaml
scripts/: generate_readme.py  install-deps.sh  pre-commit-hook
skills/: SKILL.md  plan-follow.md
tests/: conftest.py  test_auto.py  test_base.py  test_breaker.py  test_config_module.py  test_coord_state.py  test_coordination.py  test_coverage.py  test_coverage_final.py  test_decompose_coverage.py  test_fmt.py  test_git_tools.py  test_health.py  test_hooks.py  test_hooks_coverage.py  test_init.py  test_kanban_flow.py  test_mcp_server.py  test_mcp_server_coverage.py  test_peer_review.py  test_peer_review_coverage.py  test_plan_core.py  test_plan_decompose.py  test_plan_follow.py  test_plan_mgmt.py  test_plan_suggest.py  test_plan_sync.py  test_review_core_peer.py  test_review_coverage.py  test_review_integration.py  test_roadmap.py  test_roadmap_data.py  test_sync_coverage.py  test_task.py  test_templates.py  test_templates_and_todo.py  test_todo.py  test_tts_markers.py  test_validation.py
tools/: __init__.py  auto.py  base.py  config.py  coordination.py  descriptions.py  git.py  handlers_crud.py  handlers_git.py  handlers_misc.py  handlers_review.py  health.py  plan_mgmt.py  resolver.py  review.py  roadmap_data.py  schemas.py  state.py  status.py  task.py  validation.py
