[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "agentiker-plan-follow-plugin"
version = "1.5.5"
description = "Hermes Plugin für strukturierte Plan-Erstellung, Task-Enforcement, Review-Gates, parallele Gruppen, Auto-Verify/Commit"
authors = [
    {name = "Johannes Lettner"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "rich>=13.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-xdist",
]
dashboard = [
    "fastapi>=0.133.0",
]

[tool.setuptools.packages.find]
include = ["plan_follow", "plan_follow.*"]
namespaces = false

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
addopts = "-n auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]
"tests/*" = ["E402"]

[tool.coverage.run]
source = ["plan_follow"]
omit = ["tests/*", "scripts/*"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
