[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agentiker-plan-follow"
version = "0.5.6"
description = "Plan-Follow Plugin for Hermes Agent — task enforcement, peer review, cross-session coordination"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
log_cli_level = "WARNING"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "SIM", "ARG", "PTH", "PL", "RUF"]
ignore = [
    "E501",   # line-too-long (covered by formatter)
    "SIM114", # if-else -> or (sometimes less readable)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
    "S101",   # assert allowed in tests
]
